call button problem solved

--- a/index.html
+++ b/index.html
@@ -177,7 +177,15 @@
         <h3 class="text-lg font-bold flex items-center gap-2"><i class="fa-solid fa-clock"></i><span class="font-roboto text-gray-900 text-xl font-medium">Call History</span></h3>
         <button class="btn pl-5 pr-5 bg-[#00a63e] rounded-full clear-history mr-1  text-[#ffffff] font-inter font-semibold bg hover:bg-[#006747]">Clear</button>
       </div>
+      <div>
+        <h1 class="text-lg font-bold"></h1>
+        <p class="text-gray-600 font-roboto text-[18px]"></p>
+      </div>
       <ul id="historyList" class="space-y-2 text-sm text-gray-700">
+        <div>
+        <h1 class="text-lg font-bold"></h1>
+        <p class="text-gray-600 font-roboto text-[18px]"></p>
+      </div>
 
       </ul>
     </div>
