--- a/index.html
+++ b/index.html
@@ -14,46 +14,37 @@
 <body class="bg-base-100  max-h-[150px] lg:max-h-[300px] overflow-auto">
 
 <!-- Navbar -->
-<div class="w-full bg-white px-4 rounded-lg mb-4 flex flex-col md:flex-row md:justify-between md:items-center ml-0 md:ml-7">
+<div class="w-full bg-white p-4 rounded-lg mb-4 flex flex-col md:flex-row md:justify-between md:items-center items-center text-center">
   
   <!-- Left Section -->
-  <div class="flex items-center justify-center md:justify-start mb-4 md:mb-0">
+  <div class="flex items-center mb-4 md:mb-0">
     <img src="./assets/logo.png" alt="Logo" class="w-14 h-14 mr-2">
-    <span class="text-xl font-bold w-auto md:w-[135px] break-words text-[#006747]">
-      Emergency Service
-    </span>
+    <span class="text-xl font-bold text-green-700">Emergency Service</span>
   </div>
 
   <!-- Right Section -->
-  <div class="flex flex-wrap justify-center md:justify-end items-center gap-3 md:gap-4 mr-0 md:mr-9">
+  <div class="flex gap-4">
     
     <!-- Heart -->
-    <div class="flex items-center bg-[#41ff6b1a] p-2 gap-2 rounded-full px-4">
-      <span class="text-black font-semibold" id="heartCount">0</span>
-      <span><i class="fa-solid fa-heart text-[#ed1c24]"></i></span>
+    <div class="flex items-center bg-gray-100 p-2 rounded-full">
+      <span id="heartCount" class="text-black font-semibold mr-2">0</span>
+      <i class="fa-solid fa-heart text-red-600"></i>
     </div>
 
     <!-- Coin -->
-    <div class="flex items-center bg-[#41ff6b1a] p-2 gap-2 rounded-full px-4">
-      <span class="text-black font-semibold" id="coinCount">100</span>
-      <span class="w-5"><img src="./assets/coin.png" alt=""></span>
+    <div class="flex items-center bg-gray-100 p-2 rounded-full">
+      <span id="coinCount" class="text-black font-semibold mr-2">100</span>
+      <img src="./assets/coin.png" alt="coin" class="w-5">
     </div>
 
     <!-- Copy -->
-    <div class="flex items-center bg-[#00a63e] p-2 mr-3    # ...existing code...
-          - uses: actions/upload-pages-artifact@v3
-            with:
-              path: B12-A5-Emergency-Hotline
-    # ...existing code...    # ...existing code...
-          - uses: actions/upload-pages-artifact@v3
-            with:
-              path: B12-A5-Emergency-Hotline
-    # ...existing code... gap-2 rounded-full px-4">
-      <span class="text-white font-semibold" id="copyCount">0</span>
-      <span class="text-white font-inter font-semibold">Copy</span>
+    <div class="flex items-center bg-green-600 p-2 rounded-full">
+      <span id="copyCount" class="text-white font-semibold mr-2">0</span>
+      <span class="text-white font-semibold">Copy</span>
     </div>
   </div>
 </div>
+
 
 
   <!----section----->
@@ -77,7 +68,7 @@
       <!-- Card 1 -->
       <div class="card bg-white rounded-xl shadow-md p-4" data-name="Fire Service" data-number="101">
         <div class="flex justify-between mb-2">
-          <span class="text-xl bg-pink-500 p-1 rounded-xl"><img class="w-7" src="./assets/fire-service.png" alt=""></span>
+          <span class="text-xl bg-pink-500 p-2 rounded-xl"><img class="w-7" src="./assets/fire-service.png" alt=""></span>
           <button class="heart-btn text-pink-500 text-2xl"><i class="fa-regular fa-heart"></i></button>
         </div>
         <h2 class="text-lg font-bold">Fire Service Number</h2>
